slight fix to nav element, fixed overflow issue

--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
     width: 100%;
-    height: 100vh;
+    height: 70vh;
     position: relative;
 
     // display: none;
@@ -20,7 +20,7 @@
         display: inline-block;
         width: 100%;
         height: 100%;
-        background: linear-gradient( to right, #F5DAF4,#E07DEB);
+        background: linear-gradient( to right, $color-primary,$color-primary-strong);
         // #F5DAF4
         opacity: 0.8;
         z-index: 10;
@@ -48,7 +48,7 @@
     }
     
     [class^="hero__text"] {
-        background-image: linear-gradient(to right, #404040, #000 );
+        background-image: linear-gradient(to right, $color-text-dark, #000 );
         background-clip: text;
         color: transparent;
         -webkit-background-clip: text;
@@ -61,11 +61,11 @@
     &__text2 {
         margin-left: 8rem;
         background-size: 150%;
-        background-image: linear-gradient(to right, #404040, #404040 );
+        background-image: linear-gradient(to right, #404040, #000 );
     }
     
     #text3 {
-        background-image: linear-gradient(to right, #000, #404040 );
+        background-image: linear-gradient(to right, #000, $color-text-dark );
         margin-left: 5rem;
         
     }
